--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:client": "elm make elm-src/Client/Client.elm --output ./www/client.js",
-    "build:server": "elm make elm-src/Server2.elm --output ./elm-output/server.js",
+    "build:server": "elm make elm-src/Server.elm --output ./elm-output/server.js",
     "build": "npm run build:client && npm run build:server",
     "dev": "node js-src/index.js"
   },
